# ghost-shell

./: .env.example  .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  skills-lock.json  supabase_reset.sql  supabase_schema.sql  vite.config.js
.claude/: settings.local.json
.github/: funding.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
packaging/windows/: .gitignore  Package.appxmanifest
scripts/: ghost.js  git  package-msix.ps1  sign-linux.sh  sign-windows.ps1
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: google_drive.rs  lib.rs  secure_store.rs  sftp.rs  ssh.rs  supabase.rs  vault.rs
src/components/: icons.jsx  keychain-unlock-screen.jsx  terminal-view.jsx
src/components/ui/: button.jsx  dialog.jsx  sheet.jsx  tabs.jsx
src/config/: env.js
src/context/: terminal-context.js
src/css/: main.css  theme.css
src/hooks/: use-terminals.js
src/layouts/: dashboard.jsx
src/lib/: async.js  production-guard.js  session-history.js  tauri.js  utils.js
src/pages/: add-hosts.jsx  backup.jsx  export-data.jsx  host-tab.jsx  hosts.jsx  import-data.jsx  keychain.jsx  log-details.jsx  login.jsx  logs.jsx  master-password.jsx  password-update.jsx  settings.jsx  setup-password.jsx  sftp-tab.jsx  supabase-password.jsx  wipe-data.jsx
src/provider/: security-provider.jsx  terminal-provider.jsx  theme-provider.jsx
