[package]
name = "ghost-shell"
version = "1.0.0"
description = "A cross-platform SSH/SFTP client built with Tauri and React."
authors = ["GhostCompiler"]
license-file = "../LICENSE"
repository = "https://github.com/ghost-maintainer/ghost-shell"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ghost_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256", "p384", "p521", "crypto"] }
chrono = "0.4"
rsa = "0.9"
rfd = "0.14"
russh = { version = "0.61.2", default-features = false, features = ["flate2", "ring", "rsa"] }
keyring = "3"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
url = "2"


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 3
